--- a/static/main.css
+++ b/static/main.css
@@ -4,7 +4,7 @@
     margin-left: auto;
     margin-right: auto;
     padding-top: 2.5pc;
-    padding-bottom: 2.5pc;
+    padding-bottom: 0.5pc;
 }
 
 .col-sm-4 {
@@ -46,3 +46,15 @@
 p {
     font-weight: bold;
 }
+
+#spinner-div {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    z-index: 2;
+  }
